Add GUI forms for image processing application
- Created JDialogParamImage.form for parameter input dialog with labels for height, width, minimum, maximum, luminance, and contrast values.
- Implemented IsilImageProcessing.form for the main application window, including menu items for image operations such as opening, saving, and processing images with various filters and transformations.
- Added non-visual components and layout configurations to enhance user interaction and functionality.